--- a/css/index.css
+++ b/css/index.css
@@ -126,11 +126,49 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+.center {
+  display: flex;
+  justify-content: center;
+}
+.right {
+  display: flex;
+  justify-content: end;
+  justify-content: space-around;
+}
 /* Set every element's box-sizing to border-box */
 * {
   box-sizing: border-box;
+  margin: 2%;
+}
+html {
+  font-size: 62.5%;
+}
+.container {
+  max-width: 1000px;
+  margin: auto;
+  background-color: whitesmoke;
+  height: 100%;
 }
 html,
 body {
   height: 100%;
+}
+header nav {
+  display: flex;
+  justify-content: center;
+}
+header nav a {
+  margin: 1% 2%;
+  text-decoration: none;
+  font-size: 2rem;
+  color: green;
+  border: 1px solid black;
+  width: 10vw;
+  text-align: center;
+}
+header h1 {
+  font-size: 4rem;
+  color: green;
+  display: flex;
+  justify-content: center;
 }
