--- a/less/index.less
+++ b/less/index.less
@@ -48,14 +48,55 @@ table {
 	border-spacing: 0;
 }
 
+.center {
+	display: flex;
+	justify-content: center;
+}
+.right {
+	display: flex;
+	justify-content: end;
+	justify-content: space-around;
+}
+@nav-color: green;
+@text-font: 1.4rem;
+
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 2%;
 }
 html {
 	// background-color: red;
+	font-size: 62.5%;
+}
+.container {
+	max-width: 1000px;
+	margin: auto;
+	background-color: whitesmoke;
+	height: 100%;
 }
 
 html, body {
     height: 100%;
 }
+
+header {
+	nav {
+		a {
+			margin: 1% 2%;
+			text-decoration: none;
+			font-size: 2rem;
+			color: @nav-color;
+			border: 1px solid black;
+			width: 10vw;
+			text-align: center;
+		}// end of a
+		.center
+	
+	} // end of nav
+	h1 {
+		font-size: 4rem;
+		color: @nav-color;
+		.center
+	}
+} // end of header
