--- a/css/index.css
+++ b/css/index.css
@@ -144,25 +144,28 @@ html {
   font-size: 62.5%;
 }
 .container {
-  max-width: 1000px;
+  max-width: 100vw;
   margin: auto;
-  background-color: whitesmoke;
-  height: 100%;
+  background-color: palegreen;
 }
 html,
 body {
   height: 100%;
 }
+header {
+  background-color: whitesmoke;
+  padding-bottom: 2vh;
+}
 header nav {
+  border-bottom: 1px solid black;
   display: flex;
   justify-content: center;
 }
 header nav a {
-  margin: 1% 2%;
+  margin: 1%;
   text-decoration: none;
   font-size: 2rem;
   color: green;
-  border: 1px solid black;
   width: 10vw;
   text-align: center;
 }
@@ -171,4 +174,67 @@ header h1 {
   color: green;
   display: flex;
   justify-content: center;
+}
+header div {
+  margin: auto;
+  text-size: 1.4rem;
+  max-width: 75vw;
+  font-size: 1.4rem;
+}
+header div .profile {
+  text-align: center;
+  font-size: 2rem;
+  padding-bottom: 1vh;
+  padding-top: 1vh;
+}
+.top-section {
+  display: flex;
+  width: 85vw;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: auto;
+  padding: auto;
+  background-color: paleturquoise;
+}
+.top-section .top-content {
+  margin: auto;
+  width: 40vw;
+  font-size: 1.4rem;
+  padding-bottom: 1vh;
+  height: 25vh;
+}
+.top-section .top-content h2 {
+  font-weight: bold;
+  font-size: 1.8rem;
+  text-align: center;
+  padding-bottom: 1vh;
+}
+.top-section .top-content h3 {
+  font-size: 1.6rem;
+  text-align: center;
+  padding-bottom: 1vh;
+}
+.top-section .work-history {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 2.8rem;
+  height: 8vh;
+  width: 100vw;
+}
+.middle-section {
+  display: flex;
+  width: 85vw;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: auto;
+  padding: auto;
+  background-color: #889bec;
+}
+.middle-section h2 {
+  width: 100vw;
+  border: 1px solid black;
+  text-align: center;
+  font-size: 2.8rem;
+  margin: auto;
 }
