--- a/less/index.less
+++ b/less/index.less
@@ -59,7 +59,10 @@ table {
 }
 @nav-color: green;
 @text-font: 1.4rem;
-
+@margin: 1%;
+@basic-height: 1vh;
+@h2: 1.8rem;
+@h3: 1.6rem;
 /* Set every element's box-sizing to border-box */
 * {
 	box-sizing: border-box;
@@ -70,10 +73,10 @@ html {
 	font-size: 62.5%;
 }
 .container {
-	max-width: 1000px;
+	max-width: 100vw;
 	margin: auto;
-	background-color: whitesmoke;
-	height: 100%;
+	background-color: palegreen;
+	// height: 100;
 }
 
 html, body {
@@ -83,20 +86,105 @@ html, body {
 header {
 	nav {
 		a {
-			margin: 1% 2%;
+			margin: @margin;
 			text-decoration: none;
 			font-size: 2rem;
 			color: @nav-color;
-			border: 1px solid black;
+			// border: 1px solid black;
 			width: 10vw;
 			text-align: center;
 		}// end of a
+		border-bottom: 1px solid black;
 		.center
-	
+
 	} // end of nav
 	h1 {
 		font-size: 4rem;
 		color: @nav-color;
 		.center
 	}
+	div {
+		.profile {
+			text-align: center;
+			font-size: 2rem;
+			padding-bottom: @basic-height;
+			padding-top: @basic-height;
+		}
+		margin: auto;
+		text-size: @text-font;
+		// text-align: center;
+		max-width: 75vw;
+		font-size: @text-font;
+	}
+	
+	background-color: whitesmoke;
+	padding-bottom: 2vh;
 } // end of header
+
+
+.top-section {
+	.top-content {
+		h2 {
+			font-weight: bold;
+			font-size: @h2;
+			text-align: center;
+			padding-bottom: @basic-height;
+		}
+		h3 {
+			font-size: @h3;
+			text-align: center;
+			padding-bottom: @basic-height;
+		}
+
+		// border: 1px solid black;
+		margin: auto;
+		width: 40vw;
+		font-size: @text-font;
+		padding-bottom: @basic-height;
+		height: 25vh;
+	} //end of top-content
+
+	.work-history{
+		display: flex;
+		justify-content: center;
+		text-align: center;
+		// border: 1px solid black;
+		font-size: @h2+1;
+		height: 8vh;
+		width: 100vw;
+	}
+
+	display: flex;
+	width: 85vw;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	margin: auto;
+	padding: auto;
+	background-color: paleturquoise;
+	
+} //end of .top-section
+
+.middle-section {
+	h2{
+		width: 100vw;
+		border: 1px solid black;
+		text-align: center;
+		font-size: @h2+1;
+		margin: auto;
+	}
+	.left {
+		.skills{
+
+		}
+		
+		
+	}
+
+	display: flex;
+	width: 85vw;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	margin: auto;
+	padding: auto;
+	background-color: rgb(136, 155, 236);
+}//end of middle-section
