--- a/less/index.less
+++ b/less/index.less
@@ -57,6 +57,9 @@ table {
 	justify-content: end;
 	justify-content: space-around;
 }
+
+//// START OF MY CODE!!!!!!!!!///////
+
 @nav-color: green;
 @text-font: 1.4rem;
 @margin: 1%;
@@ -166,19 +169,25 @@ header {
 
 .middle-section {
 	h2{
-		width: 100vw;
-		border: 1px solid black;
+		width: 40vw;
+		// border: 1px solid black;
 		text-align: center;
 		font-size: @h2+1;
 		margin: auto;
+		padding-bottom: @basic-height;
 	}
-	.left {
+	.left-side {
 		.skills{
-
-		}
+		margin: auto;
+		width: 40vw;
+		font-size: @text-font;
+		padding-bottom: @basic-height;
+		height: 25vh;
+		text-align: center;
+		} //end of skills
 		
 		
-	}
+	} //end of left side
 
 	display: flex;
 	width: 85vw;
