--- a/less/index.less
+++ b/less/index.less
@@ -69,9 +69,9 @@ table {
 
 .standard-media-change {
 	@media (max-width: 500px) {
-		@h2: 1.4rem;
-		@h3: 1.2rem;
-		@text-font: 1rem;
+		@h2: 1.2rem;
+		@h3: 1.0rem;
+		@text-font: .8rem;
 		display: flex;
 		flex-direction: column;
 		width: 100vw;
@@ -81,9 +81,9 @@ table {
 }
 .content-media-change {
 	@media (max-width: 500px) {
-		@h2: 1.6rem;
-		@h3: 1.4rem;
-		@text-font: 1.2rem;
+		@h2: 1.2rem;
+		@h3: 1rem;
+		@text-font: .8rem;
 		display: flex;
 		flex-direction: column;
 		width: 90%;
@@ -125,7 +125,7 @@ header {
 			width: 10vw;
 			text-align: center;
 				@media (max-width: 500px) {
-					font-size: 1.5rem;
+					font-size: 1.4rem;
 
 				} // end of "a" media
 		}// end of a
@@ -154,6 +154,7 @@ header {
 	
 	background-color: whitesmoke;
 	padding-bottom: 2vh;
+	font-family: 'Jomolhari', serif;
 } // end of header
 
 
@@ -198,7 +199,7 @@ header {
 	margin: auto;
 	padding: auto;
 	background-color: paleturquoise;
-
+	font-family: 'Liu Jian Mao Cao', cursive;
 	.standard-media-change;
 	
 } //end of .top-section
